--- a/hugo.yml
+++ b/hugo.yml
@@ -1,5 +1,5 @@
 
-baseURL: 'https://tbakie.github.io/deneme/'
+baseURL: 'https://tbakie.github.io/TBEwebsite/'
 languageCode: 'en-us'
 title: 'TBE Website '
 theme: PaperMod
