--- a/hugo.yml
+++ b/hugo.yml
@@ -79,22 +79,22 @@ params:
               url: showcase/
 
     homeInfoParams:
-        Title: "Welcome to my website!❤️"
+        Title: "Welcome to my website!🦾"
         imageUrl: "resim1.jpg"
         Content: >
-            ## 🥰I'm thrilled to have you here. 
+            ## I'm thrilled to have you here. 
             
             **On this platform, I share insights and updates about my areas of interest,**
 
-            **delving into topics I am passionate about every day.👾**  
+            **delving into topics I am passionate about every day.**  
             
             **Whether it's the latest tech trends, innovative projects,**
 
-            **or just musings from my daily life, there's always something new and exciting to explore.🦾**
+            **or just musings from my daily life, there's always something new and exciting to explore.**
 
             **Stay connected and join my journey by following my social media links. Here, you'll also find a showcase of my projects,**
 
-            **giving you a glimpse into my work and what drives me.🧠**
+            **giving you a glimpse into my work and what drives me.**
 
             **Thanks for stopping by, and I hope you find something that piques your interest!💘**
             
