--- a/hugo.yml
+++ b/hugo.yml
@@ -84,7 +84,7 @@ params:
         Content: >
             ## Welcome to my personal website. 
             
-            **On this platform, ## I ## share insights and updates about my areas of interest,**
+            *On this platform, I share insights and updates about my areas of interest,*
 
             **delving into topics I am passionate about every day.**  
             
