--- a/hugo.yml
+++ b/hugo.yml
@@ -84,9 +84,11 @@ params:
         Content: >
             ## Welcome to my personal website. 
             
-            *On this platform, I share insights and updates about my areas of interest,*
+            **On this platform, I share my personal projects, insights and updates about my areas of interest,**
 
-            **delving into topics I am passionate about every day.**  
+            **delving into topics I am passionate about every day.** 
+
+            *You can find my resume at [Resume](/about)* 
             
             **Whether it's the latest tech trends, innovative projects,**
 
