--- a/hugo.yml
+++ b/hugo.yml
@@ -88,7 +88,7 @@ params:
 
             **delving into topics I am passionate about every day.** 
 
-            *You can find my resume at [Resume](/TBEwebsite/about/)* 
+            *You can find my resume at [About](/TBEwebsite/About/)* 
             
             **Whether it's the latest tech trends, innovative projects,**
 
