--- a/hugo.yml
+++ b/hugo.yml
@@ -88,11 +88,7 @@ params:
 
             **delving into topics I am passionate about every day.** 
 
-            *You can find my resume at [About](/TBEwebsite/About/)* 
-            
-            **Whether it's the latest tech trends, innovative projects,**
-
-            **or just musings from my daily life, there's always something new and exciting to explore.**
+            *You can find my resume at [About](/TBEwebsite/about/)* 
 
             **Stay connected and join my journey by following my social media links. Here, you'll also find a showcase of my projects,**
 
