--- a/hugo.yml
+++ b/hugo.yml
@@ -84,15 +84,13 @@ params:
         Content: >
             ## Welcome to my personal website. 
             
-            **On this platform, I share my personal projects, insights and updates about my areas of interest,**
+            *On this platform, I share my personal projects, research, and the journey through my Electrical and Computer Engineering process.*
 
-            **delving into topics I am passionate about every day.** 
+            *You'll also find updates about my areas of interest, where I delve into topics that I'm passionate about every day, blending engineering challenges with creative solutions.*
 
-            *You can find my resume at [About](/TBEwebsite/about/)* 
+            **You can find my resume at [About](/TBEwebsite/about/) page.**
 
-            **Stay connected and join my journey by following my social media links. Here, you'll also find a showcase of my projects,**
-
-            **giving you a glimpse into my work and what drives me.**
+            *Stay connected and join my journey by following my social media links.*
             
             
        
