--- a/hugo.yml
+++ b/hugo.yml
@@ -90,7 +90,7 @@ params:
 
             **                                                                                         **         
 
-            **You can find my resume at [Resume](/TBEwebsite/resume/) page, and stay connected with my journey by following my social media links.**
+            **You can find my resume at [Resume](/TBEwebsite/resume/) page and stay connected with my journey by following my social media links.**
 
            
             
